--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,6 +2,8 @@
     <ion-tab [root]="tab1Root" tabIcon="home"></ion-tab>
     <!-- <ion-tab [root]="addpost" tabTitle="Add Post" class="tabico" tabIcon="add-circle"></ion-tab> -->
     <ion-tab [root]="viewprofile" tabIcon="person"></ion-tab>
+    <ion-tab [root]="search" tabIcon="search"></ion-tab>
+    <ion-tab [root]="notification" tabIcon="globe"></ion-tab>
     <ion-tab [root]="chat" tabIcon="chatboxes"></ion-tab>
     <!-- <ion-tab [root]="testcamera" tabTitle="camera" tabIcon="camera"></ion-tab> -->
 </ion-tabs>
