--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -95,88 +95,93 @@
         </content-loader>
         <br>
     </div>
-    <ion-card *ngFor='let i of post,let j=index'>
-        <ion-item-divider>
-            <ion-item class='post_profile_info'>
+    <div *ngFor='let i of post,let j=index'>
+        <ion-card *ngFor='let allFrnds of allfriendsList'>
+            <div *ngIf='i.userid==allFrnds._id || (i.userid==userid)'>
+                <div>
+                    <ion-item-divider>
+                        <ion-item class='post_profile_info'>
 
-                <ion-avatar class='post_profile_avatar' item-start>
-                    <img class='profile_image_common_style' *ngIf='profileimage[i.userid]' [src]="profileimage[i.userid]" imageViewer>
-                    <img class='profile_image_common_style' *ngIf='!profileimage[i.userid]' src='../../assets/profile.png' imageViewer>
+                            <ion-avatar class='post_profile_avatar' item-start>
+                                <img class='profile_image_common_style' *ngIf='profileimage[i.userid]' [src]="profileimage[i.userid]" imageViewer>
+                                <img class='profile_image_common_style' *ngIf='!profileimage[i.userid]' src='../../assets/profile.png' imageViewer>
 
-                </ion-avatar>
-                <div class='post_profile_name' (click)='gotoprofile(i.userid)'>{{i.username}}</div>
-                <div class="dots" *ngIf='userid==i.userid' (click)='popuptoggle1(j)'>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
-            </ion-item>
-            <hr>
-            <ion-card-content>
-                <p *ngIf="i.post">{{i.post}}</p>
-                <img *ngIf="i.postimg" [src]='i.postimg' imageViewer />
-                <!-- <div class='currentdate1'>{{i.time|date:'h'}}</div> -->
-                <div class='currentdate'>{{i.time|timeAgo}}</div>
-            </ion-card-content>
-        </ion-item-divider>
-        <div class='popup' *ngIf='popuptoggle[j]'>
-            <!-- <img src="img/advance-card-bttf.png"> -->
-            <div class='popuptext' (click)='deletepost(i._id,j)'>
-                <b style='color:red'>Delete  <ion-icon name="trash"></ion-icon></b>
+                            </ion-avatar>
+                            <div class='post_profile_name' (click)='gotoprofile(i.userid)'>{{i.username}}</div>
+                            <div class='currentLocation'>{{i.postedplace}}</div>
+                            <div class="dots" *ngIf='userid==i.userid' (click)='popuptoggle1(j)'>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                            </div>
+                        </ion-item>
+                        <hr>
+                        <ion-card-content>
+                            <p *ngIf="i.post">{{i.post}}</p>
+                            <img *ngIf="i.postimg" [src]='i.postimg' imageViewer />
+                            <!-- <div class='currentdate1'>{{i.time|date:'h'}}</div> -->
+                            <div class='currentdate'>{{i.time|timeAgo}}</div>
+                        </ion-card-content>
+                    </ion-item-divider>
+                    <div class='popup' *ngIf='popuptoggle[j]'>
+                        <!-- <img src="img/advance-card-bttf.png"> -->
+                        <div class='popuptext' (click)='deletepost(i._id,j)'>
+                            <b style='color:red'>Delete  <ion-icon name="trash"></ion-icon></b>
 
-            </div>
-            <br>
-            <div *ngIf="i.postimg" class='popuptext' (click)='shareImg(i.postimg,j)'>
-                <b style='color:slateblue'>Share <ion-icon name="ios-share-alt"></ion-icon></b>
+                        </div>
+                        <br>
+                        <div *ngIf="i.postimg" class='popuptext' (click)='shareImg(i.postimg,j)'>
+                            <b style='color:slateblue'>Share <ion-icon name="ios-share-alt"></ion-icon></b>
 
-            </div>
-        </div>
-        <ion-row>
-            <ion-col>
-                <button style="color:darkslateblue" ion-button icon-start clear small>
+                        </div>
+                    </div>
+                    <ion-row>
+                        <ion-col>
+                            <button style="color:darkslateblue" ion-button icon-start clear small>
         <ion-icon *ngIf='!liketoggle[i._id]' name="ios-thumbs-up-outline"></ion-icon>
         <ion-icon *ngIf='liketoggle[i._id]' name="ios-thumbs-up"></ion-icon>
                 <div (click)="addlikes(j,userid,i._id,username)"><span style="color:black; ">{{i.likes}}</span> Like</div>
                 </button>
-            </ion-col>
-            <ion-col>
-                <button style="color:darkslateblue" ion-button icon-start clear small>
+                        </ion-col>
+                        <ion-col>
+                            <button style="color:darkslateblue" ion-button icon-start clear small>
         <ion-icon name="text"></ion-icon>
-        <div (click)='showcommenttoggle(j,i._id)'>  Comments</div>
+        <div (click)='showcommenttoggle(i._id)'>Comments</div>
       </button>
-            </ion-col>
+                        </ion-col>
 
-        </ion-row>
-
+                    </ion-row>
+                    <!-- 
         <div *ngIf='showcommenttoggle1[j]'>
             <div *ngFor='let c of dispcomment'>
                 <ion-card *ngIf='i._id==c.postid'>
 
                     <ion-item>
-                        <!-- <ion-avatar item-start>
+                         <ion-avatar item-start>
                 <img src="img/marty-avatar.png">
-            </ion-avatar> -->
+            </ion-avatar> 
                         <h2 style="color:mediumblue;">{{c.username}}</h2>
                         <div class="dcicon" *ngIf='userid==c.userid' (click)='deletecomment(c._id)'>
                         </div>
                     </ion-item>
-                    <!-- <img src="img/advance-card-bttf.png"> -->
+                    <img src="img/advance-card-bttf.png"> 
                     <ion-card-content>
                         <p>{{c.comment}}</p>
                     </ion-card-content>
 
                 </ion-card>
             </div>
-        </div>
-        <ion-row>
-            <div *ngIf='showcommenttoggle1[j]' class='comment'>
-                <ion-item>
-                    <ion-textarea rows="4" [(ngModel)]='comments[j]' type="text" placeholder="Comment .... "></ion-textarea>
-                </ion-item>
-                <button ion-button small float-right round (click)="addcomment(i._id,userid,j,username)">Add Comment</button>
+        </div> -->
+                    <ion-row>
+                        <div *ngIf='showcommenttoggle1[j]' class='comment'>
+                            <ion-item>
+                                <ion-textarea rows="4" [(ngModel)]='comments[j]' type="text" placeholder="Comment .... "></ion-textarea>
+                            </ion-item>
+                            <button ion-button small float-right round (click)="addcomment(i._id,userid,j,username)">Add Comment</button>
+                        </div>
+                    </ion-row>
+                </div>
             </div>
-        </ion-row>
-
-    </ion-card>
-
+        </ion-card>
+    </div>
 </ion-content>
